2009-01-16  Gavin Barraclough  <barraclough@apple.com>

Reviewed by Geoff Garen.

        Fixes for SamplingTool.

        https://bugs.webkit.org/show_bug.cgi?id=23390

        * assembler/MacroAssembler.h:
        (JSC::MacroAssembler::storePtr):
        * bytecode/SamplingTool.cpp:
        (JSC::SamplingTool::run):
        (JSC::SamplingTool::dump):
        * bytecode/SamplingTool.h:
        (JSC::SamplingTool::encodeSample):
        * jit/JIT.cpp:
        (JSC::JIT::privateCompileMainPass):
        (JSC::JIT::privateCompile):
        * jit/JIT.h:
        (JSC::JIT::samplingToolTrackCodeBlock):
        * jit/JITCall.cpp:
        (JSC::JIT::compileOpCall):
        (JSC::JIT::compileOpCallSlowCase):
        * jit/JITInlineMethods.h:
        (JSC::JIT::emitCTICall_internal):



Canonical link: https://commits.webkit.org/32189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39993 268f45cc-cd09-0410-ab3c-d52691b4dbfc